! fix: iframe scrollbar

--- a/samples/chat/css/style.css
+++ b/samples/chat/css/style.css
@@ -368,9 +368,13 @@ a.pull_push.active  {
 }
 
 .sp-modal-overlay {
-	z-index: 10000;
+	z-index: 1000000;
 }
 
 .sp-modal {
-	z-index: 10005;
+	z-index: 1000005;
+}
+
+iframe::-webkit-scrollbar {
+	width: 0;
 }
